--- a/page.html
+++ b/page.html
@@ -6,9 +6,9 @@
     <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <title>Sketch</title> <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
     <script src="libraries/p5.min.js"></script>
@@ -17,6 +17,6 @@
   </head>
 
   <body>
-    <script src="intro.js"></script>
+    <script src="arrivo.js"></script>
   </body>
 </html>
